--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     </style>
 
     <!-- Transpiled Plugins -->
-    <script src="js/src/util.js"></script>
-    <script src="js/src/alert.js"></script>
-    <script src="js/src/button.js"></script>
-    <script src="js/src/carousel.js"></script>
-    <script src="js/src/collapse.js"></script>
-    <script src="js/src/dropdown.js"></script>
-    <script src="js/src/modal.js"></script>
-    <script src="js/src/scrollspy.js"></script>
-    <script src="js/src/tab.js"></script>
-    <script src="js/src/tooltip.js"></script>
-    <script src="js/src/popover.js"></script>
-    <script src="js/src/toast.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/alert.js"></script>
+    <script src="js/button.js"></script>
+    <script src="js/carousel.js"></script>
+    <script src="js/collapse.js"></script>
+    <script src="js/dropdown.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/scrollspy.js"></script>
+    <script src="js/tab.js"></script>
+    <script src="js/tooltip.js"></script>
+    <script src="js/popover.js"></script>
+    <script src="js/toast.js"></script>
   </head>
   <body>
 
